Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-126775

windeployqt does not provide MinGW's libraries

    XMLWordPrintable

Details

    • 3b789ed01 (dev), 24f26ca9b (6.8), 4fc3516d6 (6.7)

    Description

      1. Use the Online Installer to install Qt 6.8.0 beta1 for MinGW and MinGW 13.1.0 (to work around QTBUG-126587).
      2. Download the attached project files.
        It's a simple Qt Widgets Application generated using Qt Creator's wizard.
      3. Open a Windows command prompt (cmd.exe).
      4. Get a Qt environment:
        D:\tmp>D:\Qt\6.8.0\mingw_64\bin\qtenv2.bat
        Setting up environment for Qt usage...
        
      5. Go to some empty directory where you'd like to build:
        D:\Qt\6.8.0\mingw_64>cd \tmp\build
        
      6. Add the right MinGW to PATH:
        D:\tmp\build>set PATH=D:\Qt\Tools\mingw1310_64\bin;%PATH%
        

        This works around QTBUG-126587

      7. Build the project:
        D:\tmp\build>qmake D:\tmp\demo\demo.pro && mingw32-make
        
      8. Try starting the built application from the command prompt.
        D:\tmp\build>release\demo.exe
        

        This works. Fine.

      9. Quit the built application.
      10. Open the Windows Explorer (not from the command prompt) and navigate to the build directory.
      11. Double-click the built .exe file.
        The application cannot start because it cannot find needed libraries. As expected.
      12. Back on the developer prompt we prepared in steps 1 to 6, run windeployqt to provide the needed libraries:
        D:\tmp\build>cd release
        
        D:\tmp\build\release>windeployqt demo.exe
        
      13. In the Windows Explorer, double-click the built .exe file.
        Now it has the Qt libraries but still it cannot find gcc's libraries libgcc_s_seh-1.dll and libstdc++-6.dll.
        I expected that windeployqt provided those.

      Attachments

        1. demo.pro
          0.6 kB
        2. main.cpp
          0.2 kB
        3. mainwindow.cpp
          0.2 kB
        4. mainwindow.h
          0.3 kB
        5. mainwindow.ui
          0.7 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            owolff Oliver Wolff
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes